syntax = "proto3";

package listings;
option go_package = "./proto;listings";

import "apartment.proto";
import "building.proto";
import "realtor.proto";
import "content.proto";

service Listings {
  // CRUD apartment functions
  rpc CreateApartment(CreateApartmentRequest) returns (Apartment);
  rpc GetApartment(GetApartmentRequest) returns (Apartment);
  rpc ListApartments(ListApartmentRequest) returns (ListApartmentResponse);
  rpc UpdateApartment(UpdateApartmentRequest) returns (Apartment);
  rpc DeleteApartment(DeleteApartmentRequest) returns (DeleteApartmentResponse);
  rpc GetNearbySchools(GetNearbySchoolsRequest) returns (GetNearbySchoolsResponse);
  // CRUD building functions
  rpc CreateBuilding(CreateBuildingRequest) returns (Building);
  rpc GetBuilding(GetBuildingRequest) returns (Building);
  rpc ListBuildings(ListBuildingRequest) returns (ListBuildingResponse);
  rpc UpdateBuilding(UpdateBuildingRequest) returns (Building);
  rpc DeleteBuilding(DeleteBuildingRequest) returns (DeleteBuildingResponse);
  // CRUD realtor functions
  rpc CreateRealtor(CreateRealtorRequest) returns (Realtor);
  rpc GetRealtor(GetRealtorRequest) returns (Realtor);
  rpc ListRealtors(ListRealtorRequest) returns (ListRealtorResponse);
  rpc UpdateRealtor(UpdateRealtorRequest) returns (Realtor);
  rpc DeleteRealtor(DeleteRealtorRequest) returns (DeleteRealtorResponse);
  // Upload and Delete images or videos from/to blob store
  rpc UploadContent(stream UploadContentRequest) returns (UploadContentResponse);
}

